--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.jobs": "0.2.10-preview.13",
     "com.unity.mathematics": "1.2.1",
+    "com.unity.physics": "0.4.1-preview",
     "com.unity.rendering.hybrid": "0.5.2-preview.4",
     "com.unity.test-framework": "1.1.16",
     "com.unity.textmeshpro": "2.1.1",
